# ssh-client

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.qss
qtutils/: utils.cpp  utils.h
ssh/: connection.cpp  connection.h  shell.cpp  shell.h
